feat: Resolvendo problema de de carregamento do vídeo

--- a/student_session.html
+++ b/student_session.html
@@ -41,8 +41,8 @@
             <section class="lesson-content">
                 <div class="lesson-media">
                     <h2>Conteúdo da Aula</h2>
-                    <p>Vídeo/PDF/Slides podem ficar aqui</p>
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/gBoFivDyqVA?si=I_giwFnad-Ju-vA0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <video width="100%" id="courseVideo" controls src="video_exemplo.mp4">
+                    </video>
                 </div>
     </div>
 
@@ -59,11 +59,11 @@
         <p>POPUP DE ENGAJAMENTO</p>
     </div>
     <div id="successModal" class="custom-modal-overlay">
-    </div>
-    <div class="custom-modal-content">
-        <h3 style="color: #28a745;">✅ Gravação Finalizada com Sucesso!</h3>
-        <p>Seu progresso de engajamento foi salvo.</p>
-        <p style="font-size: 0.8em; margin-top: 10px;">Redirecionando em 3 segundos...</p>
+        <div class="custom-modal-content">
+            <h3 style="color: #28a745;">✅ Gravação Finalizada com Sucesso!</h3>
+            <p>Seu progresso de engajamento foi salvo.</p>
+            <p style="font-size: 0.8em; margin-top: 10px;">Redirecionando...</p>
+        </div>
     </div>
 </body>
 
